fixed alignment of content & navbar

--- a/client/styles.css
+++ b/client/styles.css
@@ -86,6 +86,7 @@ body {
   justify-content: space-between;
   align-items: center;
   align-content: center;
+  background-color: green;
 }
 
 /*.answer {*/
